overflow fix

--- a/src/index.scss
+++ b/src/index.scss
@@ -34,6 +34,8 @@ div#root {
     padding-bottom: 20px;
     padding-left: 30px !important;
     padding-right: 30px !important;
+    max-height: 70%;
+    overflow-y: auto;
 }
 
 span.emoji {
